tests/examples/fail/sorts/empty_call_def.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

def f() -> bool {
	false
}

assert f()
